@@ -1,2 +1,0 @@
-<?php
-$sql[] = "UPDATE `{$dbprefix}acces` SET `page` = '/agent' WHERE `page` = 'personnel/modif.php';";
