@@ -1,2 +1,0 @@
-<?php
-$sql[] = "UPDATE `{$dbprefix}acces` SET `page` = '/holiday/edit' WHERE `page` = 'conges/modif.php';";
