@@ -1,6 +1,7 @@
 *** Unreleased ***
 - Enhancements
 Include symfony framework
+Ability to request holiday in days (optionnal)
 
 *** Version 19.10.00       (2019-10-31)   ***
 - Enhancements
